[package]
name = "remote-mem"
version = "0.1.0"
authors = ["Nils Feierabend <mztikk@outlook.de>"]
edition = "2021"
license = "MIT"
description = "Remote memory access library"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.31"
robs = "0.2.0"

[target.'cfg(windows)'.dependencies]
winproc = "0.6"

[target.'cfg(windows)'.dependencies.windows]
version = "0.36.1"
features = [
    "alloc",
    "Data_Xml_Dom",
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Diagnostics_Debug",
]
